# fastapi-project-template

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: database.py  main.py
app/core/: config.py
app/v1/: api.py
