[tool.poetry]
name = "todoapp"
version = "0.1.0"
description = ""
authors = ["Kamil Biktimirov <Biktimirov.kamil@yandex.ru>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
sqlalchemy = "^2.0.9"
pydantic = {extras = ["dotenv"], version = "^1.10.7"}
uvicorn = "^0.21.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"
flake8 = "^6.0.0"
black = "^23.3.0"
isort = "^5.12.0"
pytest = "^7.3.1"
autoflake = "^2.1.1"
pytest-cov = "^4.0.0"
pre-commit = "^3.2.2"
httpx = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
